syntax = "proto3";

package bets;

import "google/protobuf/timestamp.proto";

service Bets {
    rpc CreateBet (CreateBetRequest) returns (CreateBetResponse) {}
    rpc UpdateBet (UpdateBetRequest) returns (UpdateBetResponse) {}
    rpc IsBetCreated (IsBetCreatedRequest) returns (IsBetCreatedResponse) {}
    rpc IsBetResolved (IsBetResolvedRequest) returns (IsBetResolvedResponse) {}
}

message CreateBetRequest {
    int32 id = 1;
    string player_address = 2;
    string ref_address = 3;
    int64 amount = 4;
    int32 roll_under = 5;
    string seed = 6;
    string create_trx_hash = 7;
    int64 create_trx_lt = 8;
}

message CreateBetResponse {
    int32 id = 1;
    google.protobuf.Timestamp created_at = 2;
}

message UpdateBetRequest {
    int32 id = 1;
    int32 random_roll = 2;
    string signature = 3;
    int64 player_payout = 4;
    int64 ref_payout = 5;
    string resolve_trx_hash = 6;
    int64 resolve_trx_lt = 7;
}

message UpdateBetResponse {
    int32 id = 1;
    google.protobuf.Timestamp resolved_at = 2;
}

message IsBetCreatedRequest {
    int32 id = 1;
}

message IsBetCreatedResponse {
    bool yes = 1;
}

message IsBetResolvedRequest {
    int32 id = 1;
}

message IsBetResolvedResponse {
    bool yes = 1;
}
